--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -25,7 +25,8 @@ jobs:
         run: npm run build -- --configuration=production
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: www
+          branch: gh-pages  # Adjust this if you want to deploy to a different branch
+          folder: www   
