--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,32 +1,33 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy
 
 on:
   push:
     branches:
-      - main
+      - main  # Adjust this to match your main branch
 
 jobs:
-  deploy:
+  build:
+    name: Build Ionic App
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install Dependencies
+      run: npm install
 
-      - name: Build project
-        run: npm run build -- --configuration=production
+    - name: Build Ionic App
+      run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages  # Adjust this if you want to deploy to a different branch
-          folder: www   
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@4.1.5
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: gh-pages  # Adjust this if you want to deploy to a different branch
+        folder: www       # Adjust this if your build output directory is different
