--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -30,4 +30,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: main  # Adjust this if you want to deploy to a different branch
-        folder: ./www/wmApp       # Adjust this if your build output directory is different
+        folder: ./www       # Adjust this if your build output directory is different
