--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.2",
-    "@angular/common": "^17.0.2",
+    "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
+    "@angular/forms": "^17.2.1",
+    "@angular/platform-browser": "^17.2.1",
+    "@angular/platform-browser-dynamic": "^17.2.1",
+    "@angular/router": "^17.2.1",
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "^5.7.0",
@@ -31,10 +31,11 @@
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/angular": "^7.7.2",
+    "@ionic/pwa-elements": "^3.2.2",
     "cocoapods": "^0.0.0",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
