--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/camera": "^5.0.9",
-    "@capacitor/core": "5.7.0",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^7.7.2",
     "@ionic/pwa-elements": "^3.2.2",
     "cocoapods": "^0.0.0",
@@ -49,7 +51,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "5.7.0",
+    "@capacitor/cli": "^5.7.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
