--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "cocoapods": "^0.0.0",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
