--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@capacitor/storage": "^1.2.5",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/flashlight": "^5.36.0",
     "@ionic/angular": "^7.7.2",
     "@ionic/pwa-elements": "^3.2.2",
+    "angularx-qrcode": "^17.0.0",
     "cocoapods": "^0.0.0",
     "cordova-plugin-qrscanner": "^3.0.1",
     "ionicons": "^7.0.0",
@@ -55,6 +58,7 @@
     "@capacitor/cli": "^5.7.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
