--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/camera": "^5.0.9",
-    "@capacitor/core": "^5.7.0",
+    "@capacitor/core": "^5.7.1",
     "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@capacitor/storage": "^1.2.5",
+    "@ionic-native/camera": "^5.36.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.7.3",
     "@ionic/pwa-elements": "^3.2.2",
     "angularx-qrcode": "^17.0.0",
@@ -53,7 +55,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "^5.7.0",
+    "@capacitor/cli": "^5.7.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/qrcode": "^1.5.5",
